# inference-engine-sys-rust

./: Cargo.toml  build.rs  wrapper.h
src/: lib.rs
test_data/: resnet-50.mapping  resnet-50.xml
