[package]
name = "inference-engine-sys-rust"
version = "0.1.0"
authors = ["ArtemSkrebkov <skrebkov.art@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.3"
ndarray = "0.13.0"
ndarray-image = "0.2.1"
rulinalg = "0.4.2"

[build-dependencies]
bindgen = "0.53.2"
